@@ -1,11 +1,0 @@
-name    = Dist-Zilla-Plugin-PPPort-Test
-author  = Leon Timmermans <leont@cpan.org>
-license = Perl_5
-copyright_holder = Leon Timmermans
-copyright_year   = 2011
-version = 0.001
-
-[@Basic]
-[PkgVersion]
-[PPPort]
-version = 3
